Fixing issue where left align images and pullquotes crash into one another. Adding a little style to pq attribution. Closes #249.

--- a/static/scss/components/_article-pull-quote.scss
+++ b/static/scss/components/_article-pull-quote.scss
@@ -35,10 +35,13 @@
 
 .article-quote-attr {
   margin-left: 0;
+  margin-top: 15px;
   font-family: $he-sans;
   font-weight: $font-weight-bold;
   text-transform: uppercase;
   font-size: 11px;
+  letter-spacing: 1px;
+
 }
 
 .article-quote-desc {
